--- a/pages/cart.html
+++ b/pages/cart.html
@@ -6,6 +6,8 @@
   <title>Shopping Cart</title>
   <link rel="stylesheet" href="../assets/vendor/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="../assets/css/main.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
 
   <style>
     /* ✅ Properly align cart items */
@@ -51,8 +53,8 @@
     text-align: center;
 
     .quantity-controls .decrease {
-    background-color: #f8d7da; /* Soft Red */
-    color: #f8d7da; /* Dark Red Text */
+      background-color: #f8d7da; /* Slightly Darker Red */
+      color: #f8d7da; /* Dark Red Text */
     border: 1px solid #f5c6cb;
     padding: 6px 12px;
     cursor: pointer;
@@ -442,8 +444,9 @@ body {
 
   <header class="header sticky-top bg-light p-3 shadow-sm">
     <div class="container d-flex justify-content-between">
-      <a href="../index.html" class="btn btn-custom">Home</a>
-    </div>
+      <a href="index.html" class="btn btn-outline-secondary btn-sm mt-2 ms-3">
+        <i class="bi bi-house-door"></i> Home
+      </a>    </div>
   </header>
 
   <main class="container mt-4">
