--- a/signin.html
+++ b/signin.html
@@ -6,6 +6,8 @@
   <title>Sign In</title>
   <link rel="stylesheet" href="assets/vendor/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/main.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
   <style>
     .error {
       color: red;
@@ -30,7 +32,14 @@
   <header class="header sticky-top bg-light p-3 shadow-sm">
     <div class="container d-flex justify-content-between">
       <nav>
+
+        <a href="index.html" class="btn btn-outline-secondary btn-sm mt-2 ms-3">
+          <i class="bi bi-house-door"></i> Home
+        </a>
+        
+       <!--
         <a href="index.html" class="btn btn-custom">Home</a>
+        --> 
       </nav>
     </div>
   </header>
