--- a/signup.html
+++ b/signup.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="assets/vendor/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/main.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
 
   <style>
     .error {
@@ -25,8 +27,9 @@
   <header class="header sticky-top bg-light p-3 shadow-sm">
     <div class="container d-flex justify-content-between">
       <nav>
-        <a href="index.html" class="btn btn-custom">Home</a>
-        <a href="signin.html" class="btn btn-custom">Sign In</a>
+        <a href="index.html" class="btn btn-outline-secondary btn-sm mt-2 ms-3">
+          <i class="bi bi-house-door"></i> Home
+        </a>        <a href="signin.html" class="btn btn-custom">Sign In</a>
       </nav>
     </div>
   </header>
